sur.html files updated with one line

--- a/sur.html
+++ b/sur.html
@@ -2,3 +2,6 @@ sample test html file
 
 ----
 Some manual changes done manually
+
+----
+from locat git notepad line updated to view in remote repository
