Update for sur.html in secondary branch
sur.html updated secondary brancj

--- a/sur.html
+++ b/sur.html
@@ -5,3 +5,5 @@ Some manual changes done manually
 
 ----
 from locat git notepad line updated to view in remote repository
+
+NEW LINES ADDED FROM THE NEW BRANCH SECONDARY BRANCH FOR SUR.HTML FILE 
